# editerra-racag

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml
.github/workflows/: copilot-agent-sample.yml
docs/: DEPENDENCY_COMPLETE.md  EDITERRA_RACAG_EXECUTIVE_SUMMARY.md  EDITERRA_RACAG_IMPLEMENTATION_PLAN.md  EDITERRA_RACAG_LICENSE_EXPLAINED.md  EDITERRA_RACAG_QUICKSTART.md  INSTALLATION.md  RACAG_MCP_ROADMAP.md  RACAG_STANDALONE_ANALYSIS.md
docs/mcp/: INTEGRATION_GUIDE.md
editerra_racag/: BOOTSTRAP_SUMMARY.md  PHASE3_STATUS.md  RACAG_Handover.md  __init__.py  __main__.py  auto-start-watcher.scpt  cli.py  com.kairos.racag.watcher.plist  config.py  engine.py  install-watcher-service.sh  main.py  mcp_adapter.py  paths.py  query.py  reindex.sh  requirements.txt  run.py  run_pipeline.py  start-watcher-daemon.sh  start_racag_api.sh  test_bootstrap.py  test_cli.py
editerra_racag/adapters/: __init__.py  backend_adapter.py  copilot_adapter.py
editerra_racag/api/: api.py  copilot_adapter.py  run_api.py  server.py
editerra_racag/chunking/: __init__.py  code_chunker.py  diagnostics.py  json_chunker.py  markdown_chunker.py  normalize.py  run_chunkers.py
editerra_racag/config/: __init__.py  racag_settings.yaml
editerra_racag/context/: __init__.py  context_assembler.py
editerra_racag/db/: __init__.py
editerra_racag/diagnostics/: __init__.py  charts.py  html_report.py  json_report.py  run_diagnostics.py  scanner.py
editerra_racag/embedding/: __init__.py  chunk_embedder.py  embed_all.py  embed_and_store.py  embed_chunks.py  embedder.py  prompt_formatter.py
editerra_racag/llm/: __init__.py  base.py  factory.py
editerra_racag/llm/providers/: __init__.py  ollama_provider.py  openai_provider.py
editerra_racag/query/: __init__.py  query_engine.py
editerra_racag/reranker/: __init__.py  model_loader.py  rerank_engine.py  similarity.py
editerra_racag/retrieval/: __init__.py  query_embedder.py  semantic_retriever.py
editerra_racag/runtime/: __init__.py  racag_runtime.py
editerra_racag/server/: __init__.py  fastapi_server.py
editerra_racag/telemetry/: __init__.py  noop_tracing.py
editerra_racag/watcher/: __init__.py  file_watcher.py  racag_watcher.py
